# coti-ledger

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  load-template.sh
.github/workflows/: ci-workflow.yml  coverity-scan-workflow.yml  coverity-scanner-publish.yml  guidelines_enforcer.yml  lint-workflow.yml  publish.yml
app/: .gitignore  Makefile
app/doc/: api.md
app/src/: apdu_constants.h  apdu_handlers.h  apdu_utils.c  apdu_utils.h  io.c  io.h  main.c  shared_constants.c  shared_constants.h  shared_context.h  ui_callbacks.h  ui_flow.c  ui_flow.h  utils.c  utils.h
app/src/get_public_key/: cmd_get_public_key.c  get_public_key.c  get_public_key.h  get_public_key_utils.c  get_public_key_utils.h  handle_get_public_key.c  ui_common_get_public_key.c  ui_flow_get_public_key.c
app/src/sign_message/: cmd_sign_message.c  handle_sign_message.c  sign_message_constants.c  sign_message_constants.h  sign_message_utils.c  sign_message_utils.h  ui_common_sign_message.c  ui_flow_sign_message.c
app/src_features/get_public_key/: cmd_get_public_key.c  get_public_key.c  ui_common_get_public_key.c
app/src_features/sign_message/: cmd_sign_message.c  ui_common_sign_message.c
client/: .eslintrc  .gitignore  .prettierrc  package.json
client-sdk/: package.json
coverity/: Dockerfile
src/: main.c  ui_callbacks.h  utils.h
src_features/get_public_key/: get_public_key.h  ui_flow_get_public_key.c
src_features/sign_message/: ui_flow_sign_message.c
test/sample-app/: .gitignore  package.json
test/sample-app/public/: index.html  manifest.json
test/sample-app/src/: App.jsx
